[add] Text to header

--- a/source/localizable/index.html.slim
+++ b/source/localizable/index.html.slim
@@ -8,7 +8,8 @@ title: Free Document Templates
       = image_tag 'startupdocs_logo_dark.png', width: '220', class: 'logotype'
       h1.visually-hidden StartupDocs.ru
       h2
-        p= t('landing.header')
+        p= t('landing.header.h2')
+        p= t('landing.header.leave-email')
 
 .main role='main'
   main
