--- a/source/localizable/index.html.slim
+++ b/source/localizable/index.html.slim
@@ -23,3 +23,9 @@ title: Free Document Templates
       section
         .content
           h2= t('landing.templates.h2')
+          ul
+            - for document in data.documents.send(I18n.locale.to_sym)
+              li
+                h3
+                  = link_to document.name, document.link, title: document.name
+                p= document.description
