[add] Social section and footer

--- a/source/localizable/index.html.slim
+++ b/source/localizable/index.html.slim
@@ -29,3 +29,17 @@ title: Free Document Templates
                 h3
                   = link_to document.name, document.link, title: document.name
                 p= document.description
+
+    .section.social
+      section
+        .content
+          h2= t('landing.social.h2')
+
+    .footer.main-footer
+      footer
+        .content
+          h2= t('landing.footer.h2')
+
+    .footer-sender
+      .content
+        = t('landing.footer.contacts')
