[add] Download form as partial

--- a/source/localizable/index.html.slim
+++ b/source/localizable/index.html.slim
@@ -9,7 +9,7 @@ title: Free Document Templates
       h1.visually-hidden StartupDocs.ru
       h2
         p= t('landing.header.h2')
-        p= t('landing.header.leave-email')
+        = partial 'shared/download_form'
 
 .main role='main'
   main
