--- a/source/document/index.html.slim
+++ b/source/document/index.html.slim
@@ -11,4 +11,5 @@
 
   = partial "documents/#{I18n.locale}/#{document.link}"
   p &nbsp;
+  h2= t('download_form.h2')
   = partial 'shared/download_form'
