--- a/source/localizable/shared/_mailchimp_form.slim
+++ b/source/localizable/shared/_mailchimp_form.slim
@@ -11,4 +11,4 @@
       div style=("position: absolute; left: -5000px;")
         input name="b_041bff89f073fa6d0677e1438_bd113cf897" tabindex="-1" type="text" value="" /
       .clear
-        input#mc-embedded-subscribe.button name="subscribe" type="submit" value="Subscribe" /
+        input#mc-embedded-subscribe.button name="subscribe" type="submit" value="#{t('download_form.button')}" /
