[feature] Download files after subscribe

--- a/source/localizable/index.html.slim
+++ b/source/localizable/index.html.slim
@@ -1,6 +1,4 @@
----
-title: Free Document Templates
----
+- content_for(:title, t('landing.header.h2'))
 
 .header.main-header role='banner'
   header
