[add] Footer to document page

--- a/source/localizable/documents/ru/_reshenie-edinstvennogo-uchreditelya-obshestva.slim
+++ b/source/localizable/documents/ru/_reshenie-edinstvennogo-uchreditelya-obshestva.slim
@@ -3,7 +3,7 @@ p Текст о документе
 
 p
   ' Ниже идёт описание документа, который вы можете скачать
-  = link_to 'по этой ссылке', '#'
+  = link_to 'по этой ссылке', '#download'
   ' . Текст, выделенный
   span.term-optional
     | жёлтым цветом
