--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -11,4 +11,6 @@ html
     == javascript_include_tag  'all'
 
   body{class: page_classes}
-    == yield
+    #container
+      == yield
+    == partial 'shared/footer'
