--- a/source/localizable/shared/_footer.slim
+++ b/source/localizable/shared/_footer.slim
@@ -1,3 +1,4 @@
-.footer-sender
-  .content
-    = t('landing.footer.contacts')
+#footer
+  .footer-sender
+    .content
+      = t('landing.footer.contacts')
