[add] Disclaimer and footer

--- a/source/assets/stylesheets/style.scss
+++ b/source/assets/stylesheets/style.scss
@@ -419,6 +419,7 @@ h2{
   background: #3b3b3b;
   color: #fff;
   padding: 20px;
+  margin-bottom: 3em;
 }
 .footer-sender{
   background: #000;
@@ -440,7 +441,7 @@ h2{
   max-width: 800px;
   margin: 0 auto 20px;
   padding: 20px;
-  padding-bottom: 3em;
+  padding-bottom: 6em;
 }
 .entry-content h1, .entry-content h2{
   color: #000;
