--- a/source/localizable/index.html.slim
+++ b/source/localizable/index.html.slim
@@ -53,4 +53,5 @@
     .footer.main-footer
       footer
         .content
-          h2= t('landing.footer.h2')
+          h2= t('landing.disclaimer.h2')
+          p=  t('landing.disclaimer.text')
