--- a/source/localizable/shared/_header.slim
+++ b/source/localizable/shared/_header.slim
@@ -1,5 +1,5 @@
 .header.page-header
   header
     .header-content
-      = link_to '/', class: 'header-anchor' do
+      = link_to 'index.html', class: 'header-anchor' do
         = image_tag 'startupdocs_logo.png', class: 'page-logo', width: '200'
