Change color of logo

--- a/source/localizable/shared/_footer.slim
+++ b/source/localizable/shared/_footer.slim
@@ -1,10 +1,10 @@
 #footer
   .footer-sender
     .content
-      =' t('footer.text')
-      =' link_to 'Dmitry Vasilets', 'https://www.linkedin.com/profile/view?id=51965765'
-      =' link_to '(@pronix)', 'https://github.com/pronix'
+      => t('footer.text')
+      => link_to 'Dmitry Vasilets', 'https://www.linkedin.com/profile/view?id=51965765'
+      => link_to '(@pronix)', 'https://github.com/pronix'
       '  and
-      =' link_to 'Sergey Suprunenko', 'https://www.linkedin.com/profile/view?id=208746449'
+      => link_to 'Sergey Suprunenko', 'https://www.linkedin.com/profile/view?id=208746449'
       = link_to '(@ssuprunenko)', 'https://github.com/ssuprunenko'
       | .
