[add] Google Analytics

--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -9,6 +9,7 @@ html
 
     == stylesheet_link_tag     'all'
     == javascript_include_tag  'all'
+    == google_analytics_tag
 
   body{class: page_classes}
     #container
