--- a/source/localizable/index.html.slim
+++ b/source/localizable/index.html.slim
@@ -1,4 +1,4 @@
-- content_for(:title, t('landing.header.h2'))
+- content_for(:title, t('landing.title'))
 
 .header.main-header role='banner'
   header
