[fix] Link to documents

--- a/source/localizable/shared/_mailchimp_form.slim
+++ b/source/localizable/shared/_mailchimp_form.slim
@@ -15,4 +15,4 @@
   .frontpage-success-msg style="display:none;"
     = t('download_form.thanks')
     '
-    = link_to t('download_form.link_text'), "/uploads/#{t('download_form.link')}"
+    = link_to t('download_form.link_text'), "../uploads/#{t('download_form.link')}"
